<resources>
    <string name="app_name">Travellazza</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">News</string>
    <string name="title_notifications">History</string>
    <string name="chat">Chat</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">Email</string>
</resources>