<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_map_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_history_black"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icon_chat_black"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/icon_camera_black"
        android:title="@string/camera" />


</menu>