<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Tea_Green">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingHorizontal="9dp"
        android:textColorHint="@color/Olive_Darb_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginlogo"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_passw"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="9dp"
        android:textColorHint="@color/Olive_Darb_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_passw_confirm"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="9dp"
        android:textColorHint="@color/Olive_Darb_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passw"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="9dp"
        android:textColorHint="@color/Olive_Darb_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_passw_confirm"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_register"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_register"
        android:fallbackLineSpacing="false"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>