<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9E3AC">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/username"
        android:hintTextColor="#DD2C00"
        android:inputType="textPersonName"
        android:paddingHorizontal="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="273dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_user"
        android:ems="10"
        android:hint="@string/password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="222dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_btn"
        android:fallbackLineSpacing="false"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="176dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_register"
        android:fallbackLineSpacing="false"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="194dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:text="Keep me logged in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="I have forgotten my password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>